--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+input{
+  width: 250px;
+  height: 30px;
+  margin: 1rem;
+  border-radius: 5%;
+}
+.App{
+  margin-left: 40%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.middle{
+  
+  margin-top: 15%;
+  
+  margin-right: 60%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+  margin-left: 4rem;
+  background-color: greenyellow;
+  width: 150px;
+  height: 35px;
+  color: rgb(18, 18, 18);
+  border-radius: 10%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body{
+  background-color: rgb(150, 150, 150);
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
